--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- resume section -->
         <section>
             <h3 class="section-title">A summary of My Resume</h3>
-            <div class="resume-column-container">
+            <div class="resume-container">
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
                     <div class="resume-item">
